--- a/molecule/source/molecule.yml
+++ b/molecule/source/molecule.yml
@@ -8,21 +8,21 @@ lint:
 platforms:
   - name: centos-7
     image: jonsible/centos:7-build
-    privileged: true
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    command: "/sbin/init"
+    # privileged: true
+    # volumes:
+    #   - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    # command: "/sbin/init"
     capabilities:
       - LINUX_IMMUTABLE
     tty: true
     env:
       container: docker
   - name: debian-stretch
-    image: jonsible/debian:stretch-sbuild
-    privileged: true
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    command: "/lib/systemd/systemd"
+    image: jonsible/debian:stretch-build
+    # privileged: true
+    # volumes:
+    #   - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    # command: "/lib/systemd/systemd"
     capabilities:
       - LINUX_IMMUTABLE
     tty: true
@@ -30,6 +30,10 @@ platforms:
       container: docker
       LC_ALL: en_US.utf8
       DEBIAN_FRONTEND: noninteractive
+  - name: archlinux-latest
+    image: jonsible/archlinux:latest
+    env:
+      container: docker
 provisioner:
   name: ansible
   lint:
