--- a/tasks/os_specific/Archlinux-family.yml
+++ b/tasks/os_specific/Archlinux-family.yml
@@ -1,19 +1,18 @@
 ---
 - name: Installing build tools
   become: true
-  yum:
+  pacman:
     name: "{{ build_tools }}"
+    update_cache: true
     state: present
   when: tmux_install_from_source|bool
 
-- name: Installing additionnal dependencies
+- name: Installing additionnal build tools
   become: true
-  yum:
+  apt:
     name: "{{ item }}"
     state: present
   loop:
-    - ncurses-devel
+    - ncurses
     - libevent
-    - libevent-devel
-    - pkgconfig
   when: tmux_install_from_source|bool
