--- a/tasks/os_specific/Debian-family.yml
+++ b/tasks/os_specific/Debian-family.yml
@@ -1,11 +1,11 @@
 ---
-
 - name: Installing build tools
   become: true
   apt:
     name: "{{ build_tools }}"
     update_cache: true
     state: present
+  when: tmux_install_from_source|bool
 
 - name: Installing additionnal build tools
   become: true
@@ -17,3 +17,4 @@
     - libncurses-dev
     - libevent-dev
     - pkg-config
+  when: tmux_install_from_source|bool
