--- a/meta/main.yml
+++ b/meta/main.yml
@@ -26,11 +26,5 @@ galaxy_info:
   galaxy_tags: []
 
   dependencies:
-    - role: geerlingguy.git
-      vars:
-        git_install_from_source: true
-        git_install_from_source_force_update: true
-        git_install_path: "/usr/local"
-        git_install_version: "2.24.1"
-
     - role: jonsible.ulist
+    - role: jonsible.filter_plugins
