--- a/molecule/source_user/molecule.yml
+++ b/molecule/source_user/molecule.yml
@@ -8,10 +8,6 @@ lint:
 platforms:
   - name: centos-7
     image: jonsible/centos:7-build
-    # privileged: true
-    # volumes:
-    #   - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    # command: "/sbin/init"
     capabilities:
       - LINUX_IMMUTABLE
     tty: true
@@ -19,10 +15,6 @@ platforms:
       container: docker
   - name: debian-stretch
     image: jonsible/debian:stretch-build
-    # privileged: true
-    # volumes:
-    #   - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    # command: "/lib/systemd/systemd"
     capabilities:
       - LINUX_IMMUTABLE
     tty: true
@@ -38,6 +30,11 @@ platforms:
       container: docker
 provisioner:
   name: ansible
+  env:
+    # yamllint disable-line rule:line-length
+    ANSIBLE_STRATEGY_PLUGINS: /tmp/mitogen-0.2.9/ansible_mitogen/plugins/strategy
+    ANSIBLE_STRATEGY: mitogen_linear
+    ANSIBLE_PIPELINING: true
   lint:
     name: ansible-lint
 verifier:
