--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - pip install molecule
   - pip install molecule[docker]
   - WDIR=$(pwd)
-  - cd /tmp
+  - cd /opt
   - curl -L https://networkgenomics.com/try/mitogen-0.2.9.tar.gz | tar -xz
   - cd $WDIR
 
