--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,13 +12,11 @@ tmux_user_strip: "{{ global_user_strip | default([]) }}"
 tmux_user_filter: "{{ global_user_filter | default([])}}"
 tmux_version: "2.9"
 
-# Shouldn't be changed unless necessary
-tmux_bin_name: "tmux"
-
 # Shouldn't be changed
+tmux_bin_name: "tmux"
 tmux_user_list: "{{ global_user_list | default({}) }}"
 tmux_git_version_cmd: git ls-remote --tags https://github.com/tmux/tmux.git | sed 's/.*\///' | egrep -o "[0-9]*(\.[0-9]*)(\.[0-9]*)?$" | sort -V | tail -n1
 tmux_local_version_cmd: |
-  {{ tmux_prefix }}/bin/{{ tmux_bin_name }} -V | egrep -o "[0-9]*(\.[0-9]*)(\.[0-9]*)?([a-z])?"
+  {{ prefix }}/bin/{{ tmux_bin_name }} -V | egrep -o "[0-9]*(\.[0-9]*)(\.[0-9]*)?([a-z])?"
 
 tmux_source_url: "https://github.com/tmux/tmux/releases/download/{{ tmux_git_version }}/tmux-{{ tmux_git_version }}.tar.gz"
