--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,7 +10,7 @@ galaxy_info:
   min_ansible_version: 2.3
 
   platforms:
-    - name: CentOS
+    - name: EL
       versions:
         - 7
     - name: Debian
