--- a/molecule/source_user/molecule.yml
+++ b/molecule/source_user/molecule.yml
@@ -3,8 +3,10 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
+lint: |
+  yamllint .
+  ansible-lint
+  flake8
 platforms:
   - name: centos-7
     image: jonsible/centos:7-build
@@ -15,6 +17,15 @@ platforms:
       container: docker
   - name: debian-stretch
     image: jonsible/debian:stretch-build
+    capabilities:
+      - LINUX_IMMUTABLE
+    tty: true
+    env:
+      container: docker
+      LC_ALL: en_US.utf8
+      DEBIAN_FRONTEND: noninteractive
+  - name: ubuntu-18.04
+    image: jonsible/ubuntu:18.04-build
     capabilities:
       - LINUX_IMMUTABLE
     tty: true
@@ -35,9 +46,5 @@ provisioner:
     ANSIBLE_STRATEGY_PLUGINS: /opt/mitogen-0.2.9/ansible_mitogen/plugins/strategy
     ANSIBLE_STRATEGY: mitogen_linear
     ANSIBLE_PIPELINING: true
-  lint:
-    name: ansible-lint
 verifier:
   name: testinfra
-  lint:
-    name: flake8
