--- a/tasks/os_specific/Archlinux.yml
+++ b/tasks/os_specific/Archlinux.yml
@@ -1,1 +1,24 @@
 ---
+- name: Update cache (Arch)
+  become: true
+  pacman:
+    update_cache: true
+  tags: molecule-idempotence-notest
+
+- name: Installing build tools
+  become: true
+  pacman:
+    name: "{{ build_tools }}"
+    update_cache: true
+    state: present
+  when: tmux_install_from_source|bool
+
+- name: Installing additionnal dependencies
+  become: true
+  pacman:
+    name: "{{ item }}"
+    state: present
+  loop:
+    - ncurses
+    - libevent
+  when: tmux_install_from_source|bool
