--- a/tasks/os_specific/RedHat-family.yml
+++ b/tasks/os_specific/RedHat-family.yml
@@ -1,4 +1,10 @@
 ---
+- name: Update cache (EL)
+  become: true
+  yum:
+    update_cache: true
+  tags: molecule-idempotence-notest
+
 - name: Installing build tools
   become: true
   yum:
