--- a/tasks/source/prepare.yml
+++ b/tasks/source/prepare.yml
@@ -1,4 +1,10 @@
 ---
+- name: Installing git
+  become: true
+  package:
+    name: git
+    state: present
+
 - name: Getting latest tmux version
   shell: | # noqa 303
     set -o pipefail
